--- a/main.html
+++ b/main.html
@@ -8,6 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	<h1>Solar System</h1>
+	<img src="solarsystem.jpg" usemap="#solarmap" alt="Solar System">
+
+	<map name="solarMap">
+        <area shape="rectangle" coords="100,100,300,300" href="sun.htm" alt="Sun">
+        <area shape="circle" coords="200,150,50" href="mercury.htm" alt="Mercury">
+        <area shape="circle" coords="300,150,50" href="venus.htm" alt="Venus">
+        <area shape="circle" coords="400,150,50" href="earth.htm" alt="Earth">
+        <area shape="circle" coords="500,150,50" href="mars.htm" alt="Mars">
+        <area shape="circle" coords="600,150,50" href="jupiter.htm" alt="Jupiter">
+        <area shape="circle" coords="700,150,50" href="saturn.htm" alt="Saturn">
+        <area shape="circle" coords="800,150,50" href="uranus.htm" alt="Uranus">
+        <area shape="circle" coords="900,150,50" href="neptune.htm" alt="Neptune">
+        <area shape="circle" coords="1000,150,50" href="pluto.htm" alt="Pluto">
+        <area shape="circle" coords="1100,150,50" href="eris.htm" alt="Eris">
+        <area shape="circle" coords="1200,150,50" href="haumea.htm" alt="Haumea">
+    </map>
     <script type="text/javascript" src="./script.js">
 </script>
 
