--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 	<img src="solarsystem.jpg" usemap="#solarmap" alt="Solar System">
 
 	<map name="solarMap">
-        <area shape="rectangle" coords="100,100,300,300" href="sun.htm" alt="Sun">
+        <area shape="rect" coords="100,100,300,300" href="sun.htm" alt="Sun">
         <area shape="circle" coords="200,150,50" href="mercury.htm" alt="Mercury">
         <area shape="circle" coords="300,150,50" href="venus.htm" alt="Venus">
         <area shape="circle" coords="400,150,50" href="earth.htm" alt="Earth">
